# productivity-service

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
bookmarklet/: QUICK_START.md  README.md  bookmark-helper.html  bookmarklet-code.txt
chrome-extensions/bookmark-saver/: background.js  manifest.json
docs/: IMPLEMENTATION_PLAN.md  OBSIDIAN_AUTOMATION.md  READ_QUEUE.md  REVIEW_QUEUE.md
filesystem-daemon/: README.md  __init__.py  classifier.py  cli.py  config.py  database.py  executor.py  install.sh  models.py  rules.py  watcher.py
filesystem-daemon/launchd/: com.knightsystems.file-classifier.plist
macrowhisper/: README.md  install.sh  macrowhisper.template.json
macrowhisper/scripts/: capture-task-wrapper.sh  journal-wrapper.sh
obsidian-cleanup/: README.md  __init__.py  classifier.py  cli.py  config.py  database.py  executor.py  frontmatter.py  models.py  rules.py
obsidian-sync/: README.md  com.knightsystems.morning-routine.plist  install.sh
obsidian-sync/scripts/: extract_omnifocus.applescript  morning_routine.py
obsidian-templates/: Reading Queue.md  Review Queue.md
raycast/: README.md  install.sh
raycast/scripts/: bookmark.sh  capture-task.sh  evening-summary.sh  journal.sh  morning-brief.sh  organize-files.sh  quick-log.sh
scripts/: initial-deploy.sh
src/productivity_service/: __init__.py  config.py  main.py
src/productivity_service/models/: __init__.py  alexa.py  bookmark.py  obsidian.py  queue.py  routines.py  task.py
tests/: __init__.py  conftest.py  test_alexa.py  test_health.py  test_tasks.py
(+16 files in other folders)
