[project]
name = "productivity-service"
version = "0.1.0"
description = "Voice-to-task capture with AI tag parsing for OmniFocus"
authors = [{ name = "Marc Knight", email = "marc@mqknight.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "mangum>=0.17.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "boto3>=1.34.0",
    "PyGithub>=2.1.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    # filesystem-daemon dependencies
    "watchdog>=4.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pypdf>=4.0.0",  # PDF metadata extraction (lightweight)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "moto>=5.0.0",
    "uvicorn>=0.27.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "boto3-stubs[bedrock-runtime,ses,s3]>=1.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/productivity_service"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
